--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Potepanec</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%=render "shared/head"%>
+    <title><%= full_title(yield(:title)) %></title>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+    <%=render "shared/header"%>
     <%= yield %>
+    <%=render "shared/footer"%>
   </body>
 </html>
