--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,6 +1,7 @@
 <%= csrf_meta_tags %>
 <!-- PLUGINS CSS STYLE -->
 <!-- GOOGLE FONT -->
+<%= stylesheet_link_tag "application", :media => "all" %>
 <%= stylesheet_link_tag "application", 'https://fonts.googleapis.com/css?family=Oxygen:400,300,700', :media => "all" %>
 <!-- SITE TITTLE -->
 <meta charset="utf-8">
