--- a/app/views/potepan/sample/index.html.erb
+++ b/app/views/potepan/sample/index.html.erb
@@ -1,242 +1,210 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- SITE TITTLE -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BIGBAG Store</title>
+<% provide(:title) %>  
+<!-- BANNER -->
+<div class="bannercontainer">
+  <div class="fullscreenbanner-container">
+    <div class="fullscreenbanner">
+      <ul>
+        <li>
+          <%= image_tag("home/banner-slider/slider-bg.jpg", :alt => "slidebg1", data:{bgposition: "center center", bgfit: "cover" , bgrepeat: "no-repeat"}) %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 
-    <!-- PLUGINS CSS STYLE -->
-    <%= stylesheet_link_tag "application", :media => "all" %>
-
-    <!-- GOOGLE FONT -->
-    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Oxygen:400,300,700', :media => "all" %>
-
-    <!-- CUSTOM CSS -->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-  </head>
-
-  <body>
-    <div class="main-wrapper">
-      <!-- HEADER -->
-      <div class="header clearfix"></div>
-      <!-- BANNER -->
-      <div class="bannercontainer">
-        <div class="fullscreenbanner-container">
-          <div class="fullscreenbanner">
-            <ul>
-              <li>
-                <%= image_tag("home/banner-slider/slider-bg.jpg", :alt => "slidebg1", data:{bgposition: "center center", bgfit: "cover" , bgrepeat: "no-repeat"}) %>
-              </li>
-            </ul>
+<!-- MAIN CONTENT SECTION -->
+<section class="mainContent clearfix">
+  <div class="container">
+    <div class="row featuredCollection">
+      <div class="col-xs-12">
+        <div class="page-header">
+          <h4>人気カテゴリー</h4>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12">
+        <div class="thumbnail" onclick="location.href='single_product.html';">
+          <div class="imageWrapper">
+            <%= image_tag("home/featured-collection/featured-collection-01.jpg", :alt => "feature-collection-image") %>
+            <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Shirts</a></div>
+          </div>
+          <div class="caption">
+            <h4>Shirts</h4>
           </div>
         </div>
       </div>
-
-      <!-- MAIN CONTENT SECTION -->
-      <section class="mainContent clearfix">
-        <div class="container">
-          <div class="row featuredCollection">
-            <div class="col-xs-12">
-              <div class="page-header">
-                <h4>人気カテゴリー</h4>
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-              <div class="thumbnail" onclick="location.href='single_product.html';">
-                <div class="imageWrapper">
-                  <%= image_tag("home/featured-collection/featured-collection-01.jpg", :alt => "feature-collection-image") %>
-                  <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Shirts</a></div>
-                </div>
-                <div class="caption">
-                  <h4>Shirts</h4>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-              <div class="thumbnail" onclick="location.href='single_product.html';">
-                <div class="imageWrapper">
-                  <%= image_tag("home/featured-collection/featured-collection-02.jpg", :alt => "feature-collection-image") %>
-                  <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Bags</a></div>
-                </div>
-                <div class="caption">
-                  <h4>Bags</h4>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-              <div class="thumbnail" onclick="location.href='single_product.html';">
-                <div class="imageWrapper">
-                  <%= image_tag("home/featured-collection/featured-collection-03.jpg", :alt => "feature-collection-image") %>
-                  <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Denim</a></div>
-                </div>
-                <div class="caption">
-                  <h4>Denim</h4>
-                </div>
-              </div>
-            </div>
+      <div class="col-sm-4 col-xs-12">
+        <div class="thumbnail" onclick="location.href='single_product.html';">
+          <div class="imageWrapper">
+            <%= image_tag("home/featured-collection/featured-collection-02.jpg", :alt => "feature-collection-image") %>
+            <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Bags</a></div>
           </div>
-          <div class="row featuredProducts">
-            <div class="col-xs-12">
-              <div class="page-header">
-                <h4>新着商品</h4>
-              </div>
-            </div>
-            <div class="col-xs-12">
-              <div class="owl-carousel featuredProductsSlider">
-                <div class="slide">
-                  <div class="productImage clearfix">
-                    <%= image_tag("home/featured-product/product-01.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption clearfix">
-                    <a href="single_product.html">
-                      <h5>Mauris efficitur</h5>
-                    </a>
-                    <h3>199円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-02.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Nulla facilisi</h5>
-                    </a>
-                    <h3>149円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-03.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Praesent dui felis</h5>
-                    </a>
-                    <h3>79円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-04.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Cras eu faucibus</h5>
-                    </a>
-                    <h3>109円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-05.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Mauris lobortis augue</h5>
-                    </a>
-                    <h3>199円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-06.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Suspendisse suscipit</h5>
-                    </a>
-                   <h3>149円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-07.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Praesent a augue</h5>
-                    </a>
-                    <h3>79円</h3>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="productImage">
-                    <%= image_tag("home/featured-product/product-09.jpg", :alt => "featured-product-img") %>
-                  </div>
-                  <div class="productCaption">
-                    <a href="single_product.html">
-                      <h5>Cras vel augue</h5>
-                    </a>
-                    <h3>109円</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="caption">
+            <h4>Bags</h4>
           </div>
         </div>
-      </section>
-
-      <!-- LIGHT SECTION -->
-      <section class="lightSection clearfix">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="owl-carousel partnersLogoSlider">
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-01.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-02.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-03.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-04.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-05.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-01.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-02.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-                <div class="slide">
-                  <div class="partnersLogo clearfix">
-                    <%= image_tag("home/partners/partner-03.png", :alt => "partner-img") %>
-                  </div>
-                </div>
-              </div>
-            </div>
+      </div>
+      <div class="col-sm-4 col-xs-12">
+        <div class="thumbnail" onclick="location.href='single_product.html';">
+          <div class="imageWrapper">
+            <%= image_tag("home/featured-collection/featured-collection-03.jpg", :alt => "feature-collection-image") %>
+            <div class="masking"><a href="product_grid_left_sidebar.html" class="btn viewBtn">View Denim</a></div>
+          </div>
+          <div class="caption">
+            <h4>Denim</h4>
           </div>
         </div>
-      </section>
+      </div>
     </div>
-  </body>
-</html>
+    <div class="row featuredProducts">
+      <div class="col-xs-12">
+        <div class="page-header">
+          <h4>新着商品</h4>
+        </div>
+      </div>
+      <div class="col-xs-12">
+        <div class="owl-carousel featuredProductsSlider">
+          <div class="slide">
+            <div class="productImage clearfix">
+              <%= image_tag("home/featured-product/product-01.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption clearfix">
+              <a href="single_product.html">
+                <h5>Mauris efficitur</h5>
+              </a>
+              <h3>199円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-02.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Nulla facilisi</h5>
+              </a>
+              <h3>149円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-03.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Praesent dui felis</h5>
+              </a>
+              <h3>79円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-04.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Cras eu faucibus</h5>
+              </a>
+              <h3>109円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-05.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Mauris lobortis augue</h5>
+              </a>
+              <h3>199円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-06.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Suspendisse suscipit</h5>
+              </a>
+              <h3>149円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-07.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Praesent a augue</h5>
+              </a>
+              <h3>79円</h3>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="productImage">
+              <%= image_tag("home/featured-product/product-09.jpg", :alt => "featured-product-img") %>
+            </div>
+            <div class="productCaption">
+              <a href="single_product.html">
+                <h5>Cras vel augue</h5>
+              </a>
+              <h3>109円</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- LIGHT SECTION -->
+<section class="lightSection clearfix">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="owl-carousel partnersLogoSlider">
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-01.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-02.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-03.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-04.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-05.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-01.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-02.png", :alt => "partner-img") %>
+            </div>
+          </div>
+          <div class="slide">
+            <div class="partnersLogo clearfix">
+              <%= image_tag("home/partners/partner-03.png", :alt => "partner-img") %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
