--- a/app/views/potepan/products/show.html.erb
+++ b/app/views/potepan/products/show.html.erb
@@ -10,7 +10,7 @@
       <div class="col-xs-6">
         <ol class="breadcrumb pull-right">
           <li>
-            <%= link_to"Home", potepan_path %>
+            <%= link_to "Home", potepan_path %>
           </li>
           <li class="active"><%= @product.name %></li>
         </ol>
@@ -81,12 +81,6 @@
         </div>
       </div>
     </div>
-    <div class="row productsContent">
-      <div class="col-xs-12">
-        <div class="page-header">
-          <h4>関連商品</h4>
-        </div>
-      </div>
-    </div>
+    <%= render "products_content" %>
   </div>
 </section>
