値段の取得方法を変更

--- a/app/views/potepan/categories/show.html.erb
+++ b/app/views/potepan/categories/show.html.erb
@@ -80,7 +80,7 @@
                   </div>
                   <div class="productCaption clearfix">
                     <h5><%= product.name %></h5>
-                    <h3><%= product.price %></h3>
+                    <h3><%= product.display_price %></h3>
                   </div>
                 </div>
               <% end %>
