パーシャルにインスタンス変数をローカル変数化したものを渡すよう修正

--- a/app/views/potepan/categories/show.html.erb
+++ b/app/views/potepan/categories/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @taxon.name) %> 
-<%= render "headermenu" %>
+<%= render "headermenu", taxon: @taxon %>
 <!-- MAIN CONTENT SECTION -->
 <section class="mainContent clearfix productsContent">
   <div class="container">
