関連商品を取得するインスタンス変数をローカル変数化し追加

--- a/app/views/potepan/products/show.html.erb
+++ b/app/views/potepan/products/show.html.erb
@@ -83,6 +83,6 @@
         </div>
       </div>
     </div>
-    <%= render "products_content" %>
+    <%= render "products_content", related_products: @related_products %>
   </div>
 </section>
